Styling the SingleConcertView to fix the spacing

--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,11 @@
 	-fx-font-size: 10pt;
 }
 
+.singleViewTitle{
+	-fx-font-size: 30pt;
+	-fx-padding: 5 25 5 25;
+}
+
 .menu-bar{
 	-fx-background-color:#dadad9;
 }
@@ -31,6 +36,19 @@
 	-fx-background-color: #FF9800;
 }
 
+.removeButton{
+    -fx-text-fill: #212121;
+    -fx-padding: 5 20 5 20;
+    -fx-background-color: #e53935;
+}
+
+.removeButton:hover{
+  	-fx-border-radius: 2;
+    -fx-background-radius: 2; 
+    -fx-text-fill: #212121;
+	-fx-background-color: #e53935;
+}
+
 .submit{
     -fx-text-fill: #212121;
     -fx-padding: 8 50 8 50;
@@ -47,18 +65,19 @@
 
 .list-cell:filled:selected:focused, .list-cell:filled:selected {
     -fx-background-color:#ffcc80;
-    -fx-text-fill: #ffffff; 
+    -fx-text-fill: #212121; 
 }
 
 .list-cell:filled:hover {
     -fx-background-color:#ffcc80;
-    -fx-text-fill: white;
+    -fx-text-fill: #212121;
 }
 
 .list-cell{
  -fx-cell-size: 35px;
  -fx-font-size: 11pt;
  }
+ 
  
  .tab-pane .tab{
  -fx-border:none;
